--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,12 @@
+/* src/app/global.css */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* .pixelate {
+  animation: pixelate 2s ease-out forwards;
+} */
 
 :root {
   --background: #ffffff;
