--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,27 @@
-/* src/app/global.css */
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* .pixelate {
-  animation: pixelate 2s ease-out forwards;
-} */
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/ProximaNova-Regular.woff2") format("woff2"),
+       url("/fonts/ProximaNova-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("/fonts/ProximaNova-Bold.woff2") format("woff2"),
+       url("/fonts/ProximaNova-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-family: "Proxima Nova", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,7 +34,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-family);
 }
 
 html {
